[package]
name = "template-node"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"

[[bin]]
name = "template-node"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1.7"
exit-future = "0.1"
parking_lot = "0.4"
hex-literal = "0.1"
slog = "^2"
parity-codec = { version = "2.1" }
trie-root = { git = "https://github.com/paritytech/trie" }
sr-io = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
sr-primitives = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
substrate-cli = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
substrate-executor = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
substrate-service = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
substrate-network = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
substrate-consensus-aura = { git = "https://github.com/paritytech/substrate" , rev="d3c0b50" }
template-node-runtime = { path = "runtime" }

[build-dependencies]
vergen = "2"

[workspace]
members = [ "runtime" ]
exclude = [ "runtime/wasm" ]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
