[package]
name = "template-node-runtime"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
integer-sqrt = { git = "https://github.com/paritytech/integer-sqrt-rs.git" }
safe-mix = { version = "1.0", default-features = false}
parity-codec-derive = { version = "^2.1" }
parity-codec = { version = "^2.1", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
sr-api = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
sr-io = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
srml-support = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
srml-balances = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
srml-consensus = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
srml-executive = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
sr-primitives = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
srml-system = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
srml-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }
sr-version = { git = "https://github.com/paritytech/substrate", default-features = false , rev="d3c0b50" }

[features]
default = []
std = [
	"safe-mix/std",
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-api/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-executive/std",
	"sr-primitives/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-upgrade-key/std",
	"sr-version/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
